Revision history for POE-Component-IRC-Plugin-Eval

{{$NEXT}}

0.03  Thu Sep 9 06:23:27 GMT 2010
    - Mention App::Pocoirc in the SYNOPSIS

0.02  Mon Sep 6 04:08:11 GMT 2010
    - Remove some debugging print statements
    - Make all warnings fatal
    - Make the 'Channels' parameter actually do something

0.01  Wed Sep 1 04:37:31 GMT 2010
    - Initial release