@@ -1,6 +1,7 @@
 Revision history for POE-Component-IRC-Plugin-Eval
 
 {{$NEXT}}
+    - Forgot to mention the BotCommand requirement in the SYNOPSIS
 
 0.03  Thu Sep 9 06:23:27 GMT 2010
     - Mention App::Pocoirc in the SYNOPSIS
